tests/syntax_error/arg_after_dotdotdot.jou
declare printf(format: byte*, ..., foo: int) -> int  # Error: if '...' is used, it must be the last parameter
